# steelseriesgg-rs

./: .editorconfig  .gitignore  .pair-programming-session.md  .pre-commit-config.yaml  ACKNOWLEDGMENT.txt  AGENTS.md  BUILD_FIX_SUMMARY.md  CHANGELOG.md  CHANGES_APPLIED.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.recommended  DEPENDENCY_AUDIT_REPORT.md  FINAL_STATUS.md  HANDOFF.md  MODERNIZATION_SUMMARY.md  OPTIMIZATION_PLAN_TODO.md  OPTIMIZATION_REPORT.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_RATIONALE.md  PHYSICAL_VERIFICATION_NEEDED.md  PKGBUILD  PLAN.md  PRD.md  PROJECT_INDEX.json  PROJECT_INDEX.md  QWEN.md  RALPH_ITERATION_3_FINAL_RESULTS.md  RALPH_LOOP_LIMITATION.md  README.md  RELEASE_CHECKLIST.md  RGB_FUNCTIONALITY_VERIFIED.md  RGB_TEST_INSTRUCTIONS.md  TODO.md  TODO_ANALYSIS.md  WARP.md  audit_report.md  patch.diff  (+21 more)
.cachebro/: cache.db-wal
.cargo/: config.toml
.claude/: settings.json
.claude-dev-helper/: open-files.json
.claude/agents/: protocol-reviewer.md  security-reviewer.md
.claude/commands/: new-device.md  pr-check.md
.claude/rules/: experimental-protocol.md  unsafe-blocks.md
.claude/skills/benchmark-compare/: SKILL.md
.claude/skills/ci-matrix/: SKILL.md
.claude/skills/fuzz-runner/: SKILL.md
.claude/skills/hid-protocol/: SKILL.md
.claude/skills/rust/: SKILL.md
.github/: copilot-instructions.md
.github/config/: repo.json
.github/config/branch-protection/: main.json
.github/instructions/: code-review.instructions.md  file-reading-optimization.instructions.md  quality-standards.instructions.md  rust.instructions.md
.github/workflows/: build-arch.yml  build-linux.yml  build-windows.yml  build.yml  cargo-assist.yml  ci.yml  copilot-setup-steps.yml  release-arch.yml  release-please.yml  release.yml  rust.yml  upgrade.yml
.kilo/: kilo.json
.kilo/plans/: 1781816335567-.md  fix-release-workflows.md
.kilo/skills/dead-code-sweep/: SKILL.md
.kilo/skills/merge-to-main/: SKILL.md
.kilo/tools/: ast_grep.ts
.kilocode/rules/: project.md
.omc/: project-memory.json
.omc/sessions/: 543970f9-5431-4d49-8655-cea7250c6a30.json  5b5525f6-6dfb-4e2e-8a22-7f3803f47370.json  5dec4c2d-e120-4d14-9d34-2d796194d627.json  8dc848e6-ae69-4cea-93cf-233a1e6a11f3.json  df9d3642-ff6d-4c5c-8094-bc979714e66a.json
.omc/state/: mission-state.json
.opencode/: ocx.jsonc  opencode.jsonc
.opencode/plugin/: background-agents.ts  notify.ts  worktree.ts
.opencode/plugin/worktree/: state.ts  terminal.ts
.pkgconfig/: libudev.pc
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-performance-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md
.plugin-config/: ai-pair-programming.json
.serena/: project.yml
.sop/planning/: idea-honing.md  rough-idea.md
assets/: 99-steelseries.rules  AGENTS.md  ssgg.service
docs/: AGENTS.md  README.md
docs/archive/: MANDATORY_LED_VERIFICATION.md  PHYSICAL_VERIFICATION_NEEDED.md  RALPH_ITERATION_1_SUMMARY.md  RALPH_ITERATION_2_SUMMARY.md  RGB_VERIFICATION.md  RGB_VERIFICATION_FINAL.md
docs/development/: AGENTS.md  APEX_PRO_PROTOCOL.md  DEPENDENCY_AUDIT_REPORT.md  KEY_MAPPING_RESEARCH.md  PRD-bulk-testing.md  PRD.md  PROTOCOL_RESEARCH.md  README.md  RGB_CONTROL_ANALYSIS.md  database-schemas.md  device-pid-registry.md  device-registry.md  devices.md  engine-db-schema.md  gamesense-api.md  gg-internal-api.md  gg-reflection.txt  preflight-findings.md  prism-schema.md  protocol-keyboard.md  sonar-schema.md  todo.md
docs/development/captures/: README.md  frida-full-33308-v2.txt  frida-full-33308.txt  frida-full-4992-v2.txt  frida-full-4992.txt  frida-full-54232-v2.txt  frida-full-54232.txt  frida-full-54232.txt.err  frida-full-69020-v2.txt  frida-hid-cap.txt  frida-hid-cap.txt.err  frida-hid-cap2.txt  frida-hid-cap2.txt.err  frida-hid-cap3.txt  frida-hid-cap3.txt.err  frida-hid-cap4.txt  frida-nt-33308.txt  frida-nt-4992.txt  frida-nt-54232.txt  frida-nt-69020.txt  frida-selftest.txt  frida-selftest2.txt  frida-selftest3.txt  test-hidclass.etl  test-hidclass.etl.csv  usbport-test.etl  usbport-test.etl.csv  xhci-test.etl  xhci-test.etlx
docs/superpowers/plans/: 2026-05-27-apex-pro-tkl-2023-re-impl.md
docs/superpowers/specs/: 2026-05-27-apex-pro-tkl-2023-re-impl-design.md
mock_udev/: AGENTS.md  mock_udev.c
mock_udev/include/: libudev.h
mock_udev/pkgconfig/: libudev.pc
src/: AGENTS.md  daemon.rs  device_state.rs  diagnostics_export.rs  error.rs  fs_utils.rs  lib.rs  main.rs  main.rs.orig  main.rs.rej  performance.rs  pollrate.rs  validation.rs
src/audio/: AGENTS.md  mod.rs  pulse.rs  sonar.rs
src/config/: AGENTS.md  mod.rs
src/devices/: AGENTS.md  diagnostics.rs  discovery.rs  fuzz.rs  hid_reports.rs  hid_reports.rs.new  key_mapping.rs  mod.rs  zone_mapping.rs
src/devices/headsets/: AGENTS.md  mod.rs
src/devices/keyboards/: AGENTS.md  apex.rs  apex_pro.rs  apex_pro_tkl_2023.rs  mod.rs
src/devices/mice/: mod.rs
src/devices/speakers/: arena_7.rs  mod.rs
src/gamesense/: AGENTS.md  handlers.rs  mod.rs  server.rs
src/profiles/: AGENTS.md  mod.rs  tests.rs
src/rgb/: AGENTS.md  mod.rs  tests.rs
tests/: AGENTS.md  cors_security.rs  device_readback.rs  security_diagnostics.rs  security_tests.rs  verify_rgb_physical.sh
