[package]
name = "steelseries-gg-linux"
version = "0.1.0"
description = "A complete open-source SteelSeries GG replacement for Linux - RGB lighting, audio mixer, and GameSense support"
repository = "https://github.com/Ven0m0/steelseriesgg-rs"
readme = "README.md"
license = "MIT"
edition = "2021"
keywords = ["steelseries", "rgb", "gaming", "linux", "audio"]
categories = ["hardware-support", "games"]

[lib]
name = "steelseries_gg"
path = "src/lib.rs"

[[bin]]
name = "ssgg"
path = "src/main.rs"

# Discovery and diagnostics binaries
[[bin]]
name = "discover_actuation"
path = "src/bin/discover_actuation.rs"

[[bin]]
name = "sonar_control"
path = "src/bin/sonar_control.rs"
required-features = ["sonar"]

[features]
default = []
audio = ["dep:libpulse-binding"]
sonar = ["dep:reqwest"]

[dependencies]
# HTTP server for GameSense API
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "http2", "json"] }

# Date/time for diagnostic timestamps
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# Configuration
directories = "6.0"
hidapi = "=2.6.4"
libc = "0.2" # For root permission checks (geteuid)
libpulse-binding = { version = "2.30.1", optional = true }
nix = "0.30.1"
parking_lot = "0.12"

# HTTP client for Sonar API (optional, only needed for sonar feature)
reqwest = { version = "0.13", features = ["json"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System information for diagnostics
sysinfo = "0.33"

# Error handling
thiserror = "2.0"

# Terminal UI
indicatif = "0.17"
tabled = "0.16"
# Async runtime - only include needed features to reduce binary size
tokio = { version = "1.49", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
] }
toml = "0.9"
tower-http = { version = "0.6", default-features = false, features = ["cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.100"

# Future enhancement dependencies:
# - parking_lot: High-performance synchronization primitives (performance optimization)
# - evdev: Linux input event interface (advanced device interaction)

[profile.release]
strip = true           # Remove debug symbols
lto = "fat"            # Full link-time optimization across all crates
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Don't generate unwinding code
opt-level = 3          # Maximum optimization
debug = 0              # No debug info
overflow-checks = false # Disable integer overflow checks in release

[profile.dev]
debug = 0
split-debuginfo = "packed"
